Fix firefox overflow of results

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -8,6 +8,7 @@ body {
 }
 
 main {
+    min-height: 1px;
     display: flex;
     flex: 1;
     flex-direction: column;
